workflow class megirva